--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
     "@angular/compiler": "^20.0.0",
     "@angular/core": "^20.0.0",
     "@angular/forms": "^20.0.0",
+    "@angular/google-maps": "^20.2.1",
     "@angular/platform-browser": "^20.0.0",
     "@angular/platform-browser-dynamic": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@capacitor/android": "^7.4.3",
     "@capacitor/app": "7.0.2",
     "@capacitor/core": "7.4.3",
+    "@capacitor/geolocation": "^7.1.5",
+    "@capacitor/google-maps": "^7.1.1",
     "@capacitor/haptics": "7.0.2",
     "@capacitor/keyboard": "7.0.2",
     "@capacitor/status-bar": "7.0.2",
+    "@ionic-native/geolocation": "^5.36.0",
     "@ionic/angular": "^8.0.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
