--- a/package.json
+++ b/package.json
@@ -30,10 +30,9 @@
     "@capacitor/haptics": "7.0.2",
     "@capacitor/keyboard": "7.0.2",
     "@capacitor/status-bar": "7.0.2",
-    "@ionic-native/geolocation": "^5.36.0",
     "@ionic/angular": "^8.0.0",
     "ionicons": "^7.0.0",
-    "rxjs": "~7.8.0",
+    "rxjs": "^6.6.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
