--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,11 @@
                 "output": "assets"
               }
             ],
-            "styles": ["src/global.scss", "src/theme/variables.scss"],
+            "styles": [
+              "src/global.scss", 
+              "src/theme/variables.scss",
+              "node_modules/@ionic/angular/css/core.css"
+            ],
             "scripts": [],
             "browser": "src/main.ts"
           },
