--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,12 @@
             "styles": [
               "src/global.scss", 
               "src/theme/variables.scss",
-              "node_modules/@ionic/angular/css/core.css"
+              "node_modules/@ionic/angular/css/core.css",
+              "src/app/pages/home/home.page.scss", 
+              "src/app/pages/telefones/telefones.page.scss",
+              "src/app/pages/paths/paths.page.scss",
+              "src/app/pages/mapa/mapa.page.scss"
+
             ],
             "scripts": [],
             "browser": "src/main.ts"
