rodando no celular :)

--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,9 @@
             "polyfills": [
               "src/polyfills.ts"
             ],
+            "allowedCommonJsDependencies": [
+              "fast-deep-equal"
+            ],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
