--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ionic/angular": "^8.0.0",
     "@turf/turf": "^7.2.0",
     "ionicons": "^7.0.0",
+    "ngx-mask": "^20.0.3",
     "rxjs": "^6.6.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
