--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^20.0.0",
     "@capacitor/android": "^7.4.3",
     "@capacitor/app": "7.0.2",
+    "@capacitor/camera": "^7.0.2",
     "@capacitor/core": "7.4.3",
     "@capacitor/geolocation": "^7.1.5",
     "@capacitor/google-maps": "^7.1.1",
@@ -34,7 +35,7 @@
     "@turf/turf": "^7.2.0",
     "ionicons": "^7.0.0",
     "ngx-mask": "^20.0.3",
-    "rxjs": "^6.6.7",
+    "rxjs": "^7.8.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
