--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -35,14 +35,11 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-
+        
                 <action android:name="android.intent.action.VIEW" />
-             <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-            
-                <data android:scheme="https" 
-              android:host="filamed.com"
-              android:pathPrefix="/" />
+                <data android:scheme="filamedadmin" />
             </intent-filter>
         </activity>
 
